actualizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
 
             <div class="place-container">
-                <div class="time-zone" id="time-zone">Asia/Kolkata</div>
-                <div id="country" class="country">IN</div>
+                <div class="time-zone" id="time-zone">Sudamerica/Argentina</div>
+                <div id="country" class="country">ARG</div>
             </div>
         </div>
 
